# NeuroTown

./: .gitignore  README.md  pyproject.toml  test.py
app/: main.py
app/agents/: __init__.py  base_agent.py  npc_agent.py
app/api/: __init__.py  routes_town.py
app/memory/: __init__.py  npc_memory.py
app/world/: __init__.py  manager.py  state.py
data/: npc_profiles.json
data/memory/lijianguo/: index.faiss  index.pkl
data/memory/lixiaobai/: index.faiss  index.pkl
data/memory/wangtiechui/: index.faiss  index.pkl
data/memory/zhangxiucai/: index.faiss  index.pkl
demos/: handles_emails_agent.py
demos/Agents/: 1. static_model.py  2. dynamic_model.py  3. defining_tools.py  4. tool_error_handling.py  5. system_prompt.py  6. invocation.py  7. structured_output.py  8. memory.py  9. streaming.py
demos/LangGraph/: 1. built_first_agent_using_graph.ipynb  Use time-travel.ipynb  built_first_agent_using_graph.py  checkpoints.ipynb  checkpoints.py  checkpoints.sqlite-shm  checkpoints.sqlite-wal  forms.db-shm  forms.db-wal  handles_emails_agent.py  interrupts_approve_or_reject.ipynb  interrupts_approve_or_reject.py  interrupts_in_tools.ipynb  interrupts_in_tools.py  interrupts_review_and_edit_state.ipynb  interrupts_review_and_edit_state.py  interrupts_validating_human_input.ipynb  interrupts_validating_human_input.py  langgraph_persistence.py  memory_store.ipynb  memory_store.py  tool-approval.db-shm  tool-approval.db-wal  use_time_travel.py
demos/LangGraph/.ipynb_checkpoints/: checkpoints-checkpoint.ipynb  (+1 more)
frontend/: __init__.py  streamlit_app.py
(+10 files in other folders)
